; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_device.c_gl_primitive_type_from_d3d.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_device.c_gl_primitive_type_from_d3d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_POINTS = common dso_local global i32 0, align 4
@GL_LINES = common dso_local global i32 0, align 4
@GL_LINE_STRIP = common dso_local global i32 0, align 4
@GL_TRIANGLES = common dso_local global i32 0, align 4
@GL_TRIANGLE_STRIP = common dso_local global i32 0, align 4
@GL_TRIANGLE_FAN = common dso_local global i32 0, align 4
@GL_LINES_ADJACENCY_ARB = common dso_local global i32 0, align 4
@GL_LINE_STRIP_ADJACENCY_ARB = common dso_local global i32 0, align 4
@GL_TRIANGLES_ADJACENCY_ARB = common dso_local global i32 0, align 4
@GL_TRIANGLE_STRIP_ADJACENCY_ARB = common dso_local global i32 0, align 4
@GL_PATCHES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Unhandled primitive type %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gl_primitive_type_from_d3d(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %27 [
    i32 134, label %5
    i32 139, label %7
    i32 137, label %9
    i32 132, label %11
    i32 130, label %13
    i32 133, label %15
    i32 138, label %17
    i32 136, label %19
    i32 131, label %21
    i32 129, label %23
    i32 135, label %25
    i32 128, label %31
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @GL_POINTS, align 4
  store i32 %6, i32* %2, align 4
  br label %32

7:                                                ; preds = %1
  %8 = load i32, i32* @GL_LINES, align 4
  store i32 %8, i32* %2, align 4
  br label %32

9:                                                ; preds = %1
  %10 = load i32, i32* @GL_LINE_STRIP, align 4
  store i32 %10, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load i32, i32* @GL_TRIANGLES, align 4
  store i32 %12, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  %14 = load i32, i32* @GL_TRIANGLE_STRIP, align 4
  store i32 %14, i32* %2, align 4
  br label %32

15:                                               ; preds = %1
  %16 = load i32, i32* @GL_TRIANGLE_FAN, align 4
  store i32 %16, i32* %2, align 4
  br label %32

17:                                               ; preds = %1
  %18 = load i32, i32* @GL_LINES_ADJACENCY_ARB, align 4
  store i32 %18, i32* %2, align 4
  br label %32

19:                                               ; preds = %1
  %20 = load i32, i32* @GL_LINE_STRIP_ADJACENCY_ARB, align 4
  store i32 %20, i32* %2, align 4
  br label %32

21:                                               ; preds = %1
  %22 = load i32, i32* @GL_TRIANGLES_ADJACENCY_ARB, align 4
  store i32 %22, i32* %2, align 4
  br label %32

23:                                               ; preds = %1
  %24 = load i32, i32* @GL_TRIANGLE_STRIP_ADJACENCY_ARB, align 4
  store i32 %24, i32* %2, align 4
  br label %32

25:                                               ; preds = %1
  %26 = load i32, i32* @GL_PATCHES, align 4
  store i32 %26, i32* %2, align 4
  br label %32

27:                                               ; preds = %1
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @debug_d3dprimitivetype(i32 %28)
  %30 = call i32 @FIXME(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %29)
  br label %31

31:                                               ; preds = %1, %27
  store i32 -1, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @debug_d3dprimitivetype(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
